Set the SHARE env variable only if current branch is main

--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -10,7 +10,7 @@ jobs:
   rake:
     runs-on: ubuntu-latest
     env:
-      SHARE: "1"
+      SHARE: ${{ github.ref_name == 'main' && '1' || '' }}
 
     strategy:
       matrix:
