--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         ruby-version: ['3.1', '3.0', '2.7', '2.5.1',  '2.4.3',  '2.3.0',
                        '2.1.9',  '2.2.10', 'ruby-head', 'jruby-9.1.17.0',
-                       'jruby-head']
+                       'jruby-head', 'truffleruby-22.3.0', 'truffleruby-head']
 
     steps:
       - uses: actions/checkout@v3
