--- a/.github/workflows/benchmarks.yml
+++ b/.github/workflows/benchmarks.yml
@@ -12,9 +12,11 @@ jobs:
 
     strategy:
       matrix:
-        ruby-version: ['3.1', '3.0', '2.7', '2.5.1',  '2.4.3', 'ruby-head',
-                       'jruby-9.1.17.0', 'jruby-head', 'truffleruby-22.3.0',
-                       'truffleruby-head']
+        ruby-version: [
+          'ruby-head', '3.2', '3.1', '3.0', '2.7', '2.6', '2.5', '2.4',
+          'jruby-head', 'jruby-9.1',
+          'truffleruby-head', 'truffleruby-22'
+        ]
 
     steps:
       - name: Set Share Env
@@ -36,7 +38,7 @@ jobs:
 
     strategy:
       matrix:
-        ruby-version: ['2.3.0', '2.1.9', '2.2.10']
+        ruby-version: ['2.3', '2.2', '2.1']
 
     steps:
       - name: Set Share Env
